// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggle button should call handletoggle with argument "startRec" when clicked and recStatus is "off" and tab is valid 1`] = `
<div
  className="footer__toggle-wrap"
>
  <button
    className="button button--primary "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="span button__icon"
      role="img"
    >
      <IconRecord />
    </span>
    <span
      className="button__label"
    >
      Record
    </span>
  </button>
</div>
`;

exports[`toggle button should call handletoggle with argument "startRec" when clicked and recStatus is "paused" 1`] = `
<div
  className="footer__toggle-wrap"
>
  <button
    className="button button--primary "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="span button__icon"
      role="img"
    >
      <IconPause />
    </span>
    <span
      className="button__label"
    >
      Resume
    </span>
  </button>
</div>
`;

exports[`toggle button should call handletoggle with argument "stopRec" when clicked and recStatus is "on" 1`] = `
<div
  className="footer__toggle-wrap"
>
  <button
    className="button button--primary "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="span button__icon"
      role="img"
    >
      <IconStop />
    </span>
    <span
      className="button__label"
    >
      Stop
    </span>
  </button>
</div>
`;

exports[`toggle button should not call handletoggle when clicked and recStatus is "off" and tab is invalid 1`] = `
<div
  className="footer__toggle-wrap"
>
  <button
    className="button button--primary button--is-disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="span button__icon"
      role="img"
    >
      <IconWarning />
    </span>
    <span
      className="button__label"
    >
      Invalid Tab
    </span>
  </button>
</div>
`;
